--- a/base/result/service.yaml
+++ b/base/result/service.yaml
@@ -5,10 +5,9 @@ metadata:
     app: result
   name: result
 spec:
-  type: NodePort
-  ports:
-  - name: "result-service"
-    port: 8081
-    targetPort: 80
   selector:
     app: result
+  ports:
+  - protocol: TCP
+    port: 8081
+    targetPort: 80
