--- a/base/vote/service.yaml
+++ b/base/vote/service.yaml
@@ -5,11 +5,9 @@ metadata:
     app: vote
   name: vote
 spec:
-  type: NodePort
-  ports:
-  - name: "vote-service"
-    port: 8080
-    targetPort: 80
   selector:
     app: vote
-  
+  ports:
+  - protocol: TCP
+    port: 8080
+    targetPort: 80
