--- a/base/result/service.yaml
+++ b/base/result/service.yaml
@@ -4,6 +4,8 @@ metadata:
   labels:
     app: result
   name: result
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   selector:
     app: result
