--- a/overlays/production/voting-ingress.yaml
+++ b/overlays/production/voting-ingress.yaml
@@ -7,17 +7,17 @@ spec:
   - host: jpo-stmalo.kaze-cloud.fr
     http:
       paths:
-      - path: /
+      - path: /vote
         pathType: Prefix
         backend:
           service:
-            name: vote-service
+            name: vote
             port:
               number: 8080
       - path: /result
         pathType: Prefix
         backend:
           service:
-            name: result-service
+            name: result
             port:
               number: 8081
