--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -3,9 +3,9 @@ kind: Kustomization
 resources:
 - ../../base/database
 - ../../base/redis
-#- ../../base/result
-#- ../../base/vote
-#- ../../base/worker
+- ../../base/result
+- ../../base/vote
+- ../../base/worker
 - voting-ingress.yaml
 commonLabels:
   environment: production
@@ -35,3 +35,17 @@ patches:
     - op: replace
       path: /spec/replicas
       value: 3
+- target:
+    kind: Deployment
+    name: db
+  patch: |-
+    - op: replace
+      path: /spec/replicas
+      value: 1
+- target:
+    kind: Deployment
+    name: redis
+  patch: |-
+    - op: replace
+      path: /spec/replicas
+      value: 1
