--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -15,11 +15,11 @@ images:
 - name: redis
   newTag: "alpine"
 - name: dockersamples/examplevotingapp_result
-  newTag: "pr-307"
+  newTag: "latest"
 - name: dockersamples/examplevotingapp_vote
-  newTag: "pr-311"
-- name: bitnami/redis:latest
-  newTag: "7.4.2"
+  newTag: "latest"
+- name: redis
+  newTag: "latest"
 patches:
 - target:
     kind: Deployment
@@ -27,14 +27,14 @@ patches:
   patch: |-
     - op: replace
       path: /spec/replicas
-      value: 3
+      value: 1
 - target:
     kind: Deployment
     name: vote
   patch: |-
     - op: replace
       path: /spec/replicas
-      value: 3
+      value: 1
 - target:
     kind: Deployment
     name: db
