--- a/overlays/dev/voting-ingress.yaml
+++ b/overlays/dev/voting-ingress.yaml
@@ -4,20 +4,24 @@ metadata:
   name: jpo-ingress
 spec:
   rules:
-  - host: jpo-stmalo-dev.kaze-cloud.fr
+  - host: vote-dev.kaze-cloud.fr
     http:
       paths:
-      - path: /vote
+      - path: /
         pathType: Prefix
         backend:
           service:
-            name: vote-service
+            name: vote
             port:
               number: 8080
-      - path: /result
-        pathType: Prefix
-        backend:
-          service:
-            name: result-service
-            port:
-              number: 8081
+
+  - host: result-dev.kaze-cloud.fr
+    http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: result
+              port:
+                number: 8081
