--- a/base/vote/deployment.yaml
+++ b/base/vote/deployment.yaml
@@ -23,9 +23,9 @@ spec:
         - containerPort: 80
           name: vote
         resources:
-          limits:
-            cpu: "1"
-            memory: "1024Mi"
           requests:
+            cpu: "100m"
+            memory: "200Mi"
+          limits:
             cpu: "500m"
-            memory: "256Mi"
+            memory: "500Mi"
