--- a/overlays/production/hpa.yaml
+++ b/overlays/production/hpa.yaml
@@ -22,3 +22,12 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
+  behavior:
+    scaleDown:
+      policies:
+      - type: Pods
+        value: 1
+        periodSeconds: 60
+      - type: Percent
+        value: 50
+        periodSeconds: 60
