--- a/overlays/production/hpa.yaml
+++ b/overlays/production/hpa.yaml
@@ -26,8 +26,6 @@ spec:
     scaleDown:
       policies:
       - type: Pods
-        value: 1
-        periodSeconds: 20
-      - type: Percent
-        value: 50
-        periodSeconds: 20
+        value: 3
+        stabilizationWindowSeconds: 20
+        periodSeconds: 60
