--- a/overlays/production/hpa.yaml
+++ b/overlays/production/hpa.yaml
@@ -24,8 +24,18 @@ spec:
         averageUtilization: 80
   behavior:
     scaleDown:
+      stabilizationWindowSeconds: 300
       policies:
+      - type: Percent
+        value: 100
+        periodSeconds: 15
+    scaleUp:
+      stabilizationWindowSeconds: 0
+      policies:
+      - type: Percent
+        value: 100
+        periodSeconds: 15
       - type: Pods
-        value: 3
-        stabilizationWindowSeconds: 20
-        periodSeconds: 60
+        value: 4
+        periodSeconds: 15
+      selectPolicy: Max
