--- a/overlays/production/voting-ingress.yaml
+++ b/overlays/production/voting-ingress.yaml
@@ -1,27 +1,19 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
-  name: jpo-ingress
+  name: jpo-ingressroute
+  namespace: default
 spec:
-  rules:
-  - host: vote.kaze-cloud.fr
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: vote
-            port:
-              number: 8080
-
-  - host: result.kaze-cloud.fr
-    http:
-        paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: result
-              port:
-                number: 8081
+  entryPoints:
+    - web
+  routes:
+  - match: Host(`vote.kube-nkp.dev`)
+    kind: Rule
+    services:
+    - name: vote
+      port: 8080
+  - match: Host(`result.kube-nkp.dev`)
+    kind: Rule
+    services:
+    - name: result
+      port: 8081
