--- a/overlays/production/voting-ingress.yaml
+++ b/overlays/production/voting-ingress.yaml
@@ -1,19 +1,29 @@
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: jpo-ingressroute
-  namespace: default
+  name: jpo-ingress
+  annotations:
+
+    kubernetes.io/ingress.class: traefik
 spec:
-  entryPoints:
-    - web
-  routes:
-  - match: Host(`vote.kube-nkp.dev`)
-    kind: Rule
-    services:
-    - name: vote
-      port: 8080
-  - match: Host(`result.kube-nkp.dev`)
-    kind: Rule
-    services:
-    - name: result
-      port: 8081
+  rules:
+  - host: vote.kube-nkp.dev
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: vote
+            port:
+              number: 8080
+  - host: result.kube-nkp.dev
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: result
+            port:
+              number: 8081
